# downloads-sorter

./: .gitignore  README.md
.github/workflows/: cmake-single-platform.yml
downloads-sorter/: CMakeLists.txt  DownloadsSorter.cpp  DownloadsSorter.h  ExtensionUpdater.cpp  ExtensionUpdater.h  FileAnalyzer.cpp  FileAnalyzer.h  FolderAnalyzer.cpp  FolderAnalyzer.h  downloads-sorter.cpp  downloads-sorter.h  extsrc.json  file_categories.json  main.cpp
